--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,19 +1,19 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
-        {
-            "label": "Run LOLCODE",
-            "type": "shell",
-            "command": "wsl lci ${file}",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": [],
-            "detail": "Run LOLCODE files using lci in WSL"
-            
-        }
+      {
+        "label": "Run LOLCODE",
+        "type": "shell",
+        "command": "lci",
+        "args": [
+          "${file}"
+        ],
+        "group": {
+          "kind": "build",
+          "isDefault": true
+        },
+        "problemMatcher": []
+      }
     ]
-}
+  }
+  
