--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,20 +1,24 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-      {
-        "label": "Run LOLCODE",
-        "type": "shell",
-        "command": "lci",
-        "args": [
-          "${file}"
-        ],
-        "group": {
-          "kind": "build",
-          "isDefault": true
-        },
-        "problemMatcher": []
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Run LOLCODE",
+      "type": "shell",
+      "command": "lci",
+      "args": [
+        "${file}"
+      ],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": [],
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "new"
       }
-    ]
-  }
-
-  
+    }
+  ]
+}
